feat: add yahooFinance fx provider